@@ -177,7 +177,6 @@ extern int Game_info_out
 	(
 	int fd,				// Socket.
 	int version,			// Server/client version.
-	int num_npcs,			// # in game.
 	int edit_lift,			// Lift being edited.
 	int hide_lift,			// Lift being hidden.
 	bool map_editing,		// In 'map-editing' mode.
@@ -190,7 +189,6 @@ extern int Game_info_in
 	unsigned char *data,		// Data that was read.
 	int datalen,			// Length of data.
 	int& version,			// Server/client version.
-	int& num_npcs,			// # in game.
 	int& edit_lift,			// Lift being edited.
 	int& hide_lift,			// Lift being hidden.
 	bool& map_editing,		// In 'map-editing' mode.
